오버레이,레이아웃 최신화 및수정정

--- a/blog-community/package.json
+++ b/blog-community/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/react-dom": "^19.1.6",
     "@types/react-window": "^1.8.8",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "typescript": "~5.8.3",
@@ -21,6 +22,7 @@
     "@mui/material": "^7.2.0",
     "@supabase/supabase-js": "^2.50.4",
     "framer-motion": "^12.23.3",
+    "keen-slider": "^6.8.6",
     "react-router-dom": "^7.6.3",
     "react-window": "^1.8.11",
     "zustand": "^5.0.6"
